--- a/style.css
+++ b/style.css
@@ -22,7 +22,9 @@ ul {
   justify-content: space-between;
   padding: 0;
 }
-
+li:hover {
+  cursor: pointer;
+}
 .details {
   display: flex;
   justify-content: center;
@@ -70,4 +72,10 @@ button {
   word-spacing: 4px;
   padding: 10px 40px;
   border-radius: 5px;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #ff505f;
 }
